--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
       src="https://kit.fontawesome.com/4140acdb83.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" type="image/png" href="./github-logo-32px.png" />
     <title>GitHub Finder</title>
   </head>
   <body>
